--- a/Project Masai/cart.css
+++ b/Project Masai/cart.css
@@ -299,9 +299,9 @@ hr {
   }
 
   #footer {
-    min-height: 80px;
-    position: fixed;
-    bottom: 0;
+    min-height: 5vh !important;
+    position: fixed !;
+    bottom: 0 !important;
     width: 100%;
   }
 }
@@ -445,6 +445,10 @@ hr {
   #total h3 {
     font-size: small;
   }
+  
+  #total button{
+    width: 60%;
+  }
 
   #footer h5 {
     font-size: x-small;
@@ -461,8 +465,10 @@ hr {
   }
 
   #footer {
-    position: fixed;
-    bottom: 0;
+    min-height: 5vh !important;
+    position: fixed !;
+    bottom: 0 !important;
     width: 100%;
+    z-index: -999;
   }
 }
