--- a/Project Masai/purchases.css
+++ b/Project Masai/purchases.css
@@ -250,9 +250,9 @@ hr {
   }
 
   #footer {
-    min-height: 80px;
-    position: fixed;
-    bottom: 0;
+    min-height: 5vh !important;
+    position: fixed !;
+    bottom: 0 !important;
   }
 }
 
@@ -388,8 +388,9 @@ hr {
   }
 
   #footer {
-    position: fixed;
-    bottom: 0;
+    min-height: 5vh !important;
+    position: fixed !;
+    bottom: 0 !important;
     width: 100%;
   }
 }
