--- a/Project Masai/signIn.css
+++ b/Project Masai/signIn.css
@@ -249,9 +249,10 @@ hr {
   }
 
   #footer {
-    min-height: 80px;
-    position: fixed;
-    bottom: 0;
+    
+    position: fixed ;
+    bottom: 0 ;
+    width: 100%;
   }
 }
 
@@ -376,8 +377,9 @@ hr {
   }
 
   #footer {
-    position: fixed;
-    bottom: 0;
+    min-height: 5vh !important;
+    position: fixed !;
+    bottom: 0 !important;
     width: 100%;
   }
 }
